# sensapp

./: .editorconfig  .gitignore  .gitlint  .pre-commit-config.yaml  .travis.yml  AGENTS.md  ANALYSIS_REPORT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENCE_HEADER.txt  MAKE_USAGE.md  Makefile.toml  README  README.md  TODO.md  build.rs  index.html  params.json  pom.xml  random_sql_examples.sql  settings-test.toml  settings.toml
.claude/: settings.json
.github/workflows/: ci.yml  pre-commit.yml
_attic/net.modelbased.sensapp.library.sensor/: pom.xml
_attic/net.modelbased.sensapp.registry/: pom.xml
_attic/net.modelbased.sensapp.rrd/: pom.xml
docs/: ARCHITECTURE.md  DATAMODEL.md  INFLUX_DB.md  OPCUA_AUTODISCOVERY.md  RRDCACHED.md
net.modelbased.sensapp/: .project  README.md  pom.xml
net.modelbased.sensapp.archetype/: .project  pom.xml
net.modelbased.sensapp.archetype.service/: .project  pom.xml
net.modelbased.sensapp.archetype.system/: .project  pom.xml
net.modelbased.sensapp.backyard/: .gitignore  .project  pom.xml
net.modelbased.sensapp.backyard.apm2import/: pom.xml
net.modelbased.sensapp.backyard.echo/: README.md  pom.xml
net.modelbased.sensapp.backyard.echo.ws/: README.md  pom.xml
net.modelbased.sensapp.backyard.gatling/: .classpath  .gitignore  .project  LICENCE_HEADER.txt  pom.xml
net.modelbased.sensapp.backyard.gatling.ws/: README.md  pom.xml
net.modelbased.sensapp.backyard.weather/: Eklima_log.txt  README.md  pom.xml
net.modelbased.sensapp.core/: pom.xml
net.modelbased.sensapp.data.samples/: .gitignore  README  api.sh
net.modelbased.sensapp.data.samples/CyclingData/Bike1/: Bike1.csv  Bike1.srt  Bike1_1hz.json  Bike1_1hz.srt  Bike1_1hz_altitude.json  Bike1_1hz_crs.json  Bike1_1hz_gpsfix.json  Bike1_1hz_heading.json  Bike1_1hz_latitude.json  Bike1_1hz_longitude.json  Bike1_1hz_roll.json  Bike1_1hz_sonar.json  README  bike1.log_altfix_time_1hz.csv  bike1.log_altfix_time_1hz.json  bike1.log_altfix_time_1hz.srt  load.sh
net.modelbased.sensapp.data.samples/CyclingData/EBike1/: 2012-06-03 18-41 4.kmz  2012-06-03 18-41 4.log.gpx  EBike1.srt  EBike1_1hz.json  EBike1_1hz.srt  EBike1_1hz_ah.json  EBike1_1hz_air_temp.json  EBike1_1hz_altitude.json  EBike1_1hz_crs.json  EBike1_1hz_ctrl_temp.json  EBike1_1hz_current.json  EBike1_1hz_gps_alt.json  EBike1_1hz_gpsfix.json  EBike1_1hz_gpssats.json  EBike1_1hz_ground_speed.json  EBike1_1hz_heading.json  EBike1_1hz_latitude.json  EBike1_1hz_longitude.json  README  load.sh  (+5 more)
net.modelbased.sensapp.data.samples/FlightData/: README
net.modelbased.sensapp.data.samples/FooBar/: load.sh
net.modelbased.sensapp.data.samples/OBD_II/: README
net.modelbased.sensapp.data.samples/SFCab/: functions.sh  load.sh  load_all.sh  transform.scala
net.modelbased.sensapp.data.samples/UIC_shuttle/: README.md  load.sh
net.modelbased.sensapp.datastore/: net.modelbased.sensapp.datastore.ipr  net.modelbased.sensapp.datastore.iws  pom.xml
net.modelbased.sensapp.library/: .gitignore  .project  pom.xml
net.modelbased.sensapp.library.datastore/: README.md  pom.xml
net.modelbased.sensapp.library.http/: pom.xml
net.modelbased.sensapp.library.senml/: .gitignore  README.md  pom.xml
net.modelbased.sensapp.library.sensor/: .classpath  .project
net.modelbased.sensapp.library.system/: .gitignore  pom.xml
net.modelbased.sensapp.library.ws/: README.md  pom.xml
net.modelbased.sensapp.metamodel.repository/: pom.xml
net.modelbased.sensapp.registry/: net.modelbased.sensapp.registry.ipr  net.modelbased.sensapp.registry.iws  pom.xml
net.modelbased.sensapp.restful/: net.modelbased.sensapp.restful.ipr  net.modelbased.sensapp.restful.iws  pom.xml
net.modelbased.sensapp.rrd/: net.modelbased.sensapp.rrd.ipr  net.modelbased.sensapp.rrd.iws
net.modelbased.sensapp.service/: .project  pom.xml
net.modelbased.sensapp.service.converter/: README.md  pom.xml
net.modelbased.sensapp.service.database.raw/: README.md  pom.xml
net.modelbased.sensapp.service.dispatch/: README.md  pom.xml
net.modelbased.sensapp.service.notifier/: README.md  pom.xml
net.modelbased.sensapp.service.registry/: .gitignore  README.md  pom.xml
net.modelbased.sensapp.service.rrd/: README  pom.xml
net.modelbased.sensapp.service.sample/: pom.xml
net.modelbased.sensapp.service.ws/: README.md  pom.xml
net.modelbased.sensapp.system/: .project  pom.xml
net.modelbased.sensapp.system.pfe2012/: README.md  pom.xml
net.modelbased.sensapp.system.pfe2012/demo_scenario/: basic_demo.md
net.modelbased.sensapp.system.rrdtest/: pom.xml
net.modelbased.sensapp.system.sample/: pom.xml
net.modelbased.sensapp.system.sprints.first/: .gitignore  README.md  pom.xml
src/: config.rs  lib.rs  main.rs  name_to_uuid.rs  test_utils.rs
src/bus/: event_bus.rs  message.rs  mod.rs  utils.rs  wait_for_all.rs
src/config/: mod.rs  mqtt.rs  opcua.rs
src/crud/: list_cursor.rs  mod.rs
src/datamodel/: batch.rs  batch_builder.rs  matchers.rs  metric.rs  mod.rs  sample.rs  sensapp_datetime.rs  sensapp_labels.rs  sensapp_vec.rs  sensor.rs  sensor_data.rs  sensor_type.rs  typed_samples.rs  unit.rs
src/exporters/: arrow.rs  csv.rs  jsonl.rs  mod.rs  senml.rs
src/http/: crud.rs  influxdb.rs  mod.rs  prometheus.rs  prometheus_read.rs  server.rs  state.rs
src/importers/: arrow.rs  csv.rs  csv_strict_tests.rs  lazy_csv.rs  mod.rs  senml.rs
src/infer/: columns.rs  csv_analysis.rs  datagrid.rs  datetime_guesser.rs  geo_guesser.rs  infer.rs  is_header.rs  mod.rs  parsing.rs  sensor_id.rs  uuid.rs
src/ingestors/: mod.rs
src/parsing/: compressed.rs  mod.rs
src/storage/: common.rs  error.rs  mod.rs  query.rs  storage.rs  storage_factory.rs
src/test_utils/: db.rs  fixtures.rs  http.rs  mod.rs
tests/: arrow_integration.rs  clickhouse_integration.rs  crud_dcat_api.rs  datamodel.rs  health_check.rs  ingestion.rs  parser_edge_cases.rs  prometheus_matcher_integration.rs  prometheus_remote_read.rs  prometheus_remote_read_integration.rs  query_export.rs  query_sensors_by_labels.rs  rrdcached_integration.rs  simple_promql.rs
tests/common/: db.rs  fixtures.rs  http.rs  mod.rs
(+1482 files in other folders)
